# psk-proj-podstawy-grafiki-komputerowej

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
silnik2d/: CMakeLists.txt  README.md
silnik2d/docs/html/: annotated.html  classes.html  dir_000002_000000.html  dir_000003_000000.html  dir_000004_000000.html  dir_1142552feab8151f1f9978b3f419f72e.html  dir_1142552feab8151f1f9978b3f419f72e_dep.map  dir_1142552feab8151f1f9978b3f419f72e_dep.md5  dir_120ed4da3e3217b1e7fc0b4f48568e79.html  dir_120ed4da3e3217b1e7fc0b4f48568e79_dep.map  dir_120ed4da3e3217b1e7fc0b4f48568e79_dep.md5  dir_2052808828190f934b76e979ee65af8a.html  dir_2052808828190f934b76e979ee65af8a_dep.map  dir_2052808828190f934b76e979ee65af8a_dep.md5  dir_598c6b932476483e887a5fefec147bbc.html  dir_598c6b932476483e887a5fefec147bbc_dep.map  dir_598c6b932476483e887a5fefec147bbc_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  files.html  functions.html  functions_enum.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  graph_legend.md5  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  (+11 more)
silnik2d/docs/html/d0/d12/: fidgetSpinner_8hpp__dep__incl.map  fidgetSpinner_8hpp__dep__incl.md5
silnik2d/docs/html/d0/d26/: test_2main_8cpp__incl.map  test_2main_8cpp__incl.md5
silnik2d/docs/html/d0/d8d/: test2_2main_8cpp.html  test2_2main_8cpp_a0771209d6ddc7b70e2a222f27b12f387_cgraph.map  test2_2main_8cpp_a0771209d6ddc7b70e2a222f27b12f387_cgraph.md5  test2_2main_8cpp_a0771209d6ddc7b70e2a222f27b12f387_icgraph.map  test2_2main_8cpp_a0771209d6ddc7b70e2a222f27b12f387_icgraph.md5  test2_2main_8cpp_a169e80ba056ef07b9e6ab592b29f32cc_cgraph.map  test2_2main_8cpp_a169e80ba056ef07b9e6ab592b29f32cc_cgraph.md5  test2_2main_8cpp_a169e80ba056ef07b9e6ab592b29f32cc_icgraph.map  test2_2main_8cpp_a169e80ba056ef07b9e6ab592b29f32cc_icgraph.md5  (+41 more)
silnik2d/docs/html/d0/dec/: ball_8hpp__incl.map  (+1 more)
silnik2d/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_3.js  (+44 more)
silnik2d/sprawozdanie/: spr.org  spr.tex
silnik2d/src/: CMakeLists.txt
silnik2d/src/engine/: CMakeLists.txt  animatedObject.cpp  animatedObject.hpp  animatedSpriteSheet.cpp  animatedSpriteSheet.hpp  engine.cpp  engine.hpp
silnik2d/src/test/: CMakeLists.txt
silnik2d/src/test2/: CMakeLists.txt  ball.cpp  gamePlayer.cpp  main.cpp
silnik2d/src/test3/: CMakeLists.txt
silnik2d/src/test4/: CMakeLists.txt  main.cpp
silnik2d/src/test5/: CMakeLists.txt  main.cpp
silnik2d/src/test6/: CMakeLists.txt  main.cpp
silnik2d/src/test7/: CMakeLists.txt  main.cpp
silnik2d/src/test8/: CMakeLists.txt  main.cpp
silnik3d/: CMakeLists.txt  README.md
silnik3d/.cache/clangd/index/: engine.cpp.4F65613A4FE91920.idx
silnik3d/engine/: CMakeLists.txt  engine.cpp
silnik3d/engine/src/: CMakeLists.txt
silnik3d/resources/: CMakeLists.txt  resources.hpp.in
silnik3d/resources/shaders/: fragment.glsl  vertex.glsl
silnik3d/sprawozdanie/: spr.org  spr.tex
silnik3d/src/: CMakeLists.txt  camera.cpp  engine.cpp  vertexArray.cpp
silnik3d/src/engine/: CMakeLists.txt  basicMesh.cpp  camera.cpp  cube.cpp  engine.cpp  engine.hpp  light.cpp  log.hpp  mesh.cpp  model.cpp  movable.cpp  movable.hpp  moveable.cpp  rotatable.cpp  rotateable.cpp  scaleable.cpp  shader.cpp  shader.hpp  shape.cpp  sphere.cpp  texture.cpp  transformable.hpp  updateable.hpp  vertexArray.cpp  vertexBuffer.cpp
silnik3d/src/engine/include/: basicMesh.hpp  camera.hpp  cube.hpp  drawable.hpp  elementBuffer.cpp  elementBuffer.hpp  light.hpp  mesh.hpp  model.hpp  moveable.hpp  resources.hpp  rotatable.hpp  rotateable.hpp  scaleable.hpp  shader.hpp  shader_m.hpp  shape.hpp  sphere.hpp  texture.hpp  torus.hpp  transformable.hpp  vertex.hpp  vertexArray.hpp  vertexBuffer.hpp
silnik3d/src/include/: shader_m.hpp
silnik3d/src/test/: CMakeLists.txt  main.cpp
silnik3d/src/test10/: main.cpp
silnik3d/src/test12/: main.cpp
silnik3d/src/test16/: main.cpp
silnik3d/src/test2/: CMakeLists.txt  main.cpp
silnik3d/src/test3/: fragment.glsl  main.cpp
silnik3d/src/test4/: CMakeLists.txt  main.cpp
silnik3d/src/test5/: CMakeLists.txt  fragment.glsl  main.cpp  vertexArray.hpp
silnik3d/src/test6/: CMakeLists.txt  main.cpp
silnik3d/src/test7/: main.cpp
silnik3d/src/test8/: main.cpp
silnik3d/src/test9/: fragment.glsl  main.cpp
sprawozdanie/: spr.org  spr.tex
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  GameObject.cpp  GameObject.hpp  animatedObject.cpp  animatedObject.hpp  animatedSpriteSheet.cpp  animatedSpriteSheet.hpp  circle.cpp  circle.hpp  circleShape.cpp  circleShape.hpp  drawable.cpp  drawable.hpp  engine.cpp  engine.hpp  lineSegment.cpp  lineSegment.hpp  log.hpp  player.cpp  player.hpp  point2d.cpp  point2d.hpp  primitiveRenderer.cpp  primitiveRenderer.hpp  rectangleShape.cpp  rectangleShape.hpp  shape.cpp  shape.hpp  updateableObject.cpp  updateableObject.hpp
src/test/: CMakeLists.txt  main.cpp  test.cpp
src/test2/: CMakeLists.txt  ball.cpp  ball.hpp  bush.cpp  bush.hpp  character.cpp  character.hpp  fidgetSpinner.cpp  fidgetSpinner.hpp  gamePlayer.cpp  gamePlayer.hpp  main.cpp
src/test2/character/: info.txt
src/test2/resource/fidgetSpinner/: config.txt  fidgetSpinner.xcf
src/test2/resource/player/: spritesheet.xcf
src/test2/resurce/player/: spritesheet.xcf
src/test3/: animation.cpp  animation.hpp  main.cpp
src/test3/resources/animation/: config.txt
(+440 files in other folders)
